--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -906,3 +906,105 @@ button:focus {
     color: #ffffff;
   }
   
+  /* Add this to your existing CSS or create a new styles.css file */
+
+/* Mobile Navigation Menu */
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--c-gray-800);
+  z-index: 1000;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease;
+}
+
+.mobile-nav.open {
+  transform: translateX(0);
+}
+
+.mobile-nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.mobile-nav li {
+  margin-bottom: 1rem;
+}
+
+.mobile-nav a {
+  display: block;
+  padding: 1rem 2rem;
+  color: var(--c-text-secondary);
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+
+.mobile-nav a:hover, .mobile-nav a:focus {
+  color: var(--c-text-primary);
+}
+
+.mobile-menu-toggle {
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .mobile-menu-toggle {
+    display: block;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    z-index: 1500; /* Ensure it's above other elements */
+    font-size: 1.5rem;
+    color: var(--c-text-primary);
+  }
+
+  .app-header-navigation {
+    display: none;
+  }
+
+  .app-header-actions {
+    display: none;
+  }
+
+  .mobile-nav.open .mobile-menu-toggle {
+    color: var(--c-text-secondary);
+  }
+}
+
+
+
+.app-body-navigation.active {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: auto;
+  background-color: #fff;
+  z-index: 1;
+  border-bottom: 1px solid #ddd;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+  max-width: 250px; /* Adjust this value to set the maximum width of the menu */
+}
+
+.app-header-mobile {
+  position: relative;
+  z-index: 2;
+}
+
+.app-header-mobile button {
+  position: relative;
+  z-index: 2;
+}
+
+.app-body {
+  margin-bottom: 0; /* Remove the margin-bottom to prevent the footer from being pushed down */
+}
+
+.app-header-mobile button.active {
+  color: #000;
+}
